Added power ore, bug tested god quest, updated java syntax in various places